Resolves: tdf#104368 allow toolbars to have keyboard focus

note that there aren't any floating dockable toolbars available
under wayland, just X so
export GDK_BACKEND=x11
to get gtk's X backend under wayland

Change-Id: I07e345a00f8fef4c40dcaf208e3438783f8f280e