vcl/unx/gtk3/gtk3gtkframe.cxx
@@ -1258,7 +1258,7 @@ void GtkSalFrame::Init( SalFrame* pParent, SalFrameStyleFlags nStyle )
         else if( (nStyle & SalFrameStyleFlags::OWNERDRAWDECORATION) )
         {
             eType = GDK_WINDOW_TYPE_HINT_TOOLBAR;
-            gtk_window_set_accept_focus(GTK_WINDOW(m_pWindow), false);
+            gtk_window_set_focus_on_map(GTK_WINDOW(m_pWindow), false);
             gtk_window_set_decorated(GTK_WINDOW(m_pWindow), false);
         }
         gtk_window_set_type_hint( GTK_WINDOW(m_pWindow), eType );
